# No-Contracts

./: .env.example  .gitignore  MANIFEST.in  README.md  alembic.ini  pyproject.toml
alembic/: README  env.py
docs/: ARCHITECTURE.md  DATA_SCHEMA.md  DEPLOYMENT_DIGITALOCEAN.md  RESEARCH_RULES.md
scripts/: audit_collection_coverage.py  audit_orderbook_prices.py  audit_research_dataset.py  build_features.py  build_labels.py  build_splits.py  check_env.py  check_kalshi_connectivity.py  collect_markets.py  collect_orderbooks.py  collect_snapshot.py  db_healthcheck.py  db_migrate.py  db_revision.py  deployment_smoke_check.py  init_db.py  refresh_market_lifecycle.py  render_systemd_units.py  run_backfill.py  run_backtest.py  run_market_snapshot.py  run_research_pipeline.py  run_research_report.py  run_shadow_bucket_dashboard.py  run_shadow_bucket_report.py  run_shadow_bucket_scan.py  score_shadow_bucket_entries.py
tests/: test_alembic_foundation.py  test_alpha_safety_public_surface.py  test_audit_collection_coverage_script.py  test_audit_orderbook_prices_script.py  test_audit_research_dataset_script.py  test_auth.py  test_backtest_no_carry.py  test_build_features_script.py  test_build_labels_script.py  test_build_splits.py  test_build_splits_script.py  test_collect_markets_multi_status.py  test_collection_coverage.py  test_collector_summary_normalize.py  test_collectors_common.py  test_collectors_events.py  test_collectors_markets.py  test_collectors_orderbooks.py  test_collectors_scripts.py  test_config.py  test_database_schema.py  test_dataset_audit.py  test_db_config.py  (+31 more)
(+58 files in other folders)
