[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kalshi-no-carry"
version = "0.7.0"
description = "Research scaffold for Kalshi NO-contract carry / mispricing studies"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "Kalshi NO Carry Research" }]
dependencies = [
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "httpx>=0.27",
    "cryptography>=42.0",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "alembic>=1.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
